examples/01-clean-code-arch-simple/src/domain/orders/errors/invalid-order-id-error.ts
export class InvalidOrderIdError extends Error {
  constructor(message: string) {
    super(message);
    this.name = "InvalidOrderIdError";
  }
}
